add client and new post.js

--- a/.gitignore
+++ b/.gitignore
@@ -638,3 +638,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+images/Screenshot 2023-03-03 082904_ESzeJi.png
+images/Screenshot 2023-03-03 082904_flEXCL.png
+images/Screenshot 2023-03-03 082904_VrcDTL.png
