--- a/.gitignore
+++ b/.gitignore
@@ -641,3 +641,7 @@ cython_debug/
 images/Screenshot 2023-03-03 082904_ESzeJi.png
 images/Screenshot 2023-03-03 082904_flEXCL.png
 images/Screenshot 2023-03-03 082904_VrcDTL.png
+images/Screenshot 2023-03-03 082904_KhsIMF.png
+blog_api.db
+blog_api.db
+blog_api.db
